# CMakeTest

CMAKE_BV1vR4y1u77h/CMake01/: CMakeLists.txt
CMake01/: CMakeLists.txt  main.cpp
CMake02/: CMakeLists.txt
CMake02/lib/: CMakeLists.txt  hello.cpp  hello.h
CMake03/: CMakeLists.txt
CMake03/src/: CMakeLists.txt
